[package]
name = "minigrepv9"
version = "0.1.0"
authors = ["Satyam Bansal <satyamsgsits1994@gmail.com>"]
edition = "2021"
description = "A simple grep tool created for learning purpose"
license = "MIT"
license-file = "LICENSE.txt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
